working reduced fit

--- a/SMEFiT-cards/runcard_EWPO_reduced.yaml
+++ b/SMEFiT-cards/runcard_EWPO_reduced.yaml
@@ -44,9 +44,9 @@ coefficients:
   Opl1: { 'min': -2, 'max': 2 }
   Opl2: { 'min': -2, 'max': 2 }
   Opl3: { 'min': -2, 'max': 2 }
-  O3pl1: { 'min': -2, 'max': 2 }
-  O3pl2: { 'min': -2, 'max': 2 }
-  O3pl3: { 'min': -2, 'max': 2 }
+    #O3pl1: { 'min': -2, 'max': 2 }
+    #O3pl2: { 'min': -2, 'max': 2 }
+    #O3pl3: { 'min': -2, 'max': 2 }
   Ope: { 'min': -2, 'max': 2 }
   Opmu: { 'min': -2, 'max': 2 }
   Opta: { 'min': -2, 'max': 2 }
