--- a/SMEFiT-cards/runcard_EWPO_reduced.yaml
+++ b/SMEFiT-cards/runcard_EWPO_reduced.yaml
@@ -53,6 +53,7 @@ coefficients:
 
   Oll: { 'min': -2, 'max': 2 }
   OpWB: { 'min': -2, 'max': 2 }
-  OpD: { 'min': -2, 'max': 2 }
+  #OpD: { 'min': -2, 'max': 2 }
 
 rot_to_fit_basis: null
+
