--- a/SMEFiT-cards/runcard_LEP_quadratics.yaml
+++ b/SMEFiT-cards/runcard_LEP_quadratics.yaml
@@ -26,7 +26,14 @@ bounds: Null
 
 # NS settings
 
-n_samples: 20000
+n_samples: 1000
+nlive: 400
+lepsilon: 0.05
+target evidence_unc: 0.5
+frac_remain: 0.01
+store_raw: False
+vectorized: False
+float64: False
 
 
 # Datasets to include
